...
        android:layout_below="@+id/viewpager"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selectable_btn"
            android:gravity="center"
            android:text="SKIP"
...
